# vAnalytics

./: .gitignore  CLAUDE.md  HUMAN_IN_LOOP_TRACKING.md  INTERACTIVE_TRACKING_GUIDE.md  NorthStar.txt  PLAYER_ID_TAGGING.md  README.md  RECEIVE_ANALYSIS.md  RECEIVE_DETECTION_DIAGRAM.md  RECEIVE_DETECTION_EXPLAINED.md  RECEIVE_OVERDETECTION_EXPLAINED.md  WEB_INTERFACE_GUIDE.md  action_classifier_deep_dive.txt  architecture.md  architecture_review.txt  auditor.py  dashboard.py  drift_report.md  post_edit_drift.md  proposed_plan.md  pyproject.toml  requirements.txt  run_basic_tracking.py  run_color_tracking.py  run_distributed_tracking.py  run_fixed_tracking.py  run_interactive_tracking.py  run_pipeline.py  run_simple_tracking.py  run_single_player_pipeline.py  run_web_tracking.py  view_video.py
.claude-workflow/: post_edit_status.json
Rithika_Training_analysis/: player_stats.json  report.html  segments.jsonl  summary.json
configs/: default.yaml
docs/: PIPELINE_ARCHITECTURE.txt  codebase_overview.md
examples/: README.md  annotated_video.py  batch_process.py  bootstrap_tracking.py  bootstrap_tracking_web.py  interactive_tracking.py  query_examples.py  quickstart.py  realtime_demo.py  view_receives.py
scripts/: create_github_repo.sh  create_verification_clips.py  download_test_videos.py  remove_court_noise.py  test_actions.py  test_color_normalization.py  test_court_detection.py  test_pose.py  test_segments.py  test_stabilization.py  test_tracking.py  test_tracking_improved.py  test_video_io.py  upload_to_github.sh
volley_analytics/: __init__.py
volley_analytics/actions/: __init__.py  classifier.py  visualize.py
volley_analytics/analytics/: __init__.py  export.py  query.py  serve_receive.py  stats.py  store.py  timeline.py
volley_analytics/common/: __init__.py  config.py  data_types.py
volley_analytics/court/: __init__.py  detector.py
volley_analytics/detection_tracking/: __init__.py  bytetrack.py  detector.py  player_filter.py  tracker.py
volley_analytics/human_in_loop/: __init__.py  bootstrap.py  interactive_editor.py  web_review.py
volley_analytics/pipeline/: __init__.py  __main__.py  cli.py  pipeline.py
volley_analytics/pose/: __init__.py  estimator.py  visualize.py
volley_analytics/reid/: __init__.py  extractor.py  feature_extractor.py
(+13 files in other folders)
