[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "volley-analytics"
version = "0.1.0"
description = "Volleyball video analytics system for match footage analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Volleyball Analytics Team"}
]
keywords = ["volleyball", "video", "analytics", "sports", "computer-vision", "pose-estimation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "ultralytics>=8.0.0",
    "mediapipe>=0.10.0",
    "filterpy>=1.4.5",
    "lap>=0.4.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "python-json-logger>=2.0.0",
    "yt-dlp>=2023.10.0",
]

[project.scripts]
volley-analytics = "volley_analytics.cli:main"

[project.urls]
Homepage = "https://github.com/volleyball-analytics/volley-analytics"
Documentation = "https://github.com/volleyball-analytics/volley-analytics#readme"
Repository = "https://github.com/volleyball-analytics/volley-analytics"

[tool.setuptools.packages.find]
where = ["."]
include = ["volley_analytics*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long - handled by formatter
